All json (#13)
* Bootstrap on-network with go-swagger and ginkgo


* On-network should aways returm json and return 400 as needed


* Updated bug
