# swagger.yaml
@@ -77,6 +77,22 @@ definitions:
       type: string
      error:
       type: string
+  SwitchConfigResponse:
+    type: object
+    properties:
+      config:
+        type: string
+  SwitchVersionResponse:
+    type: object
+    properties:
+      version:
+        type: string
+  Status:
+    type: object
+    properties:
+     message:
+      type: string
+
 
 schemes:
  - http
@@ -120,13 +136,8 @@ paths:
           description: Login Success
           schema:
             $ref: '#/definitions/Token'
-        400:
+        401:
           description: Whether the user is not found or error while login
-          schema:
-            $ref: '#/definitions/LoginError'
-        403:
-          description:
-            If user is not found (bad credentials) OR if user can not login.
           schema:
             $ref: '#/definitions/LoginError'
   /about:
@@ -162,6 +173,8 @@ paths:
       responses:
         201:
           description: Successfully issued update switch firmware
+          schema:
+            $ref: '#definitions/Status'
         default:
           description: Error
           schema:
@@ -184,6 +197,8 @@ paths:
       responses:
         200:
           description: Successfully returned switch running config
+          schema:
+            $ref: '#definitions/SwitchConfigResponse'
         default:
           description: Error
           schema:
@@ -206,6 +221,8 @@ paths:
        responses:
          200:
            description: Successfully returned switch firmware version
+           schema:
+            $ref: '#definitions/SwitchVersionResponse'
          default:
            description: Error
            schema:
